RESOLVED FIXED315503
REGRESSION(313831@main): 'overridePersistentNotificationMinimumLifetimeForTesting' is unavailable: not available on visionOS
https://bugs.webkit.org/show_bug.cgi?id=315503
Summary REGRESSION(313831@main): 'overridePersistentNotificationMinimumLifetimeForTes...
Jonathan Bedard
Reported 2026-05-25 06:30:23 PDT
https://commits.webkit.org/313831@main regressed the visionOS build.
Attachments
Jonathan Bedard
Comment 1 2026-05-25 06:30:24 PDT
Jonathan Bedard
Comment 2 2026-05-25 06:31:20 PDT
EWS
Comment 3 2026-05-25 06:33:39 PDT
Committed 313841@main (851f95ca2322): <https://commits.webkit.org/313841@main> Reviewed commits have been landed. Closing PR #65615 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.