REGRESSION(313831@main): 'overridePersistentNotificationMinimumLifetimeForTesting' is unavailable: not available on visionOS https://bugs.webkit.org/show_bug.cgi?id=315503 rdar://177873811

Unreviewed build root.

* Tools/WebKitTestRunner/cocoa/TestControllerCocoa.mm:
(WTR::TestController::platformInitializeDataStore):

Canonical link: https://commits.webkit.org/313841@main